<resources>
    <string name="app_name">OTAMS</string>
    <string name="reg_butt_text">Register Now!</string>
    <string name="login_butt_text">Login</string>
    <string name="welcome_box_text">Welcome to OTAMS</string>
    <string name="registration_text">Registration</string>
    <string name="student_option">Student</string>
    <string name="tutor_option">Tutor</string>
    <string name="back_button_description">A button that goes back to the welcome page</string>
    <string name="first_name_text">*First Name</string>
    <string name="last_name_text">*Last Name</string>
    <string name="email_text">*Email</string>
    <string name="phone_text">*Phone</string>
    <string name="pass_text">*Password</string>
    <string name="register">Register</string>
    <string name="password">*Password</string>
    <string name="username">*Username</string>
    <string name="back_button">Back Button</string>
    <string name="login_to_your_account">Login To Your Account!</string>
    <string name="login">Login</string>
    <string name="program_of_study">Program of Study</string>
    <string name="courses_to_teach">Courses to Teach, separated by comma</string>
    <string name="highest_level_of_study">Highest Level of Study</string>
    <string name="adminWelcomeMessage">Hey, welcome to admin dashboard</string>
    <string name="logoutText">Logout</string>
    <string name="admin_welcome">Welcome! You are logged in as an Admin.</string>
    <string name="logout_button">Logout</string>
    <string name="current_tab">Current</string>
    <string name="denied_tab">Denied</string>
    <string name="approved_tab">Approved</string>
    <string name="create_slot">Create Slot</string>
    <string name="select_end_time">Select End Time:</string>
    <string name="select_start_time">Select Start Time:</string>
    <string name="create_new_availability_slot">Create New Availability Slot</string>
    <string name="start_time">Start Time</string>
    <string name="manual_approval">Manual Approval</string>
    <string name="end_time">End Time</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date:</string>
    <string name="session_approval_preference">Session Approval Preference:</string>
    <string name="auto_approve">Auto-Approve</string>
</resources>